# hamlet

./: .baseline-synthesis.md  .defaults-whitelist-compliant.txt  .defaults-whitelist.txt  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .skill-refactor-analysis.md  .skill-test-scenarios.md  ACTION_2_COMPLETE.md  ACTION_9_1_COMPLETE.md  AGENTS.md  AUTO_PLAY_FIX.md  CASCADE_ENGINE_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_ACTION_TESTS.md  CONTRIBUTING.md  CONTROLS_BEFORE_AFTER.md  CONVERGENCE_ANALYSIS.md  DEMO_README.md  DEPENDENCY_ANALYSIS_INDEX.txt  DEPENDENCY_ANALYSIS_REPORT.txt  DEPENDENCY_ANALYSIS_SUMMARY.md  DEPENDENCY_GRAPH_VISUAL.txt  FRONTEND_REWARD_BAR.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_SUMMARY.md  LEVEL_2_TRAINING.md  LIVE_INFERENCE_UPDATES.md  METER_RELATIONSHIP_REDESIGN.md  MINIMAL_CONTROLS_SPEC.md  P1.1_PROGRESS.md  P1.1_TDD_PLAN.md  P1.2_EPISODE_FLUSH_REPORT.md  P1.2_GAP_CLOSURE_RESPONSE.md  P1.3_CURRICULUM_PURITY_VERIFICATION.md  P1.3_CURRICULUM_SIGNAL_PURITY_COMPLETE.md  P2.2_MASKED_LOSS_FIX_COMPLETE.md  P3.2_EXPLORATION_CHECKPOINT_AUDIT.md  (+58 more)
.claude/agents/: hamlet-ux-frontend-specialist.md
.claude/skills/: vue3-ux-design.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: config-validation.yml  full-tests.yml  lint.yml  tests.yml
archeologist_archive/: 00-coordination.md  01-discovery-findings.md  02-subsystem-catalog.md  03-diagrams.md  04-final-report.md
archeologist_archive/temp/: task-agent-networks.md  task-compiler-adapters.md  task-config-dtos.md  task-curriculum.md  task-demo-system.md  task-environment.md  task-exploration.md  task-population.md  task-recording.md  task-substrates.md  task-training.md  task-universe-compiler.md  task-vfs.md  validation-catalog-final.md  validation-catalog.md  validation-diagrams.md  validation-final-report.md
configs/: affordances.yaml  affordances_corrected.yaml  affordances_temporal.yaml  bars.yaml  curriculum_quick_test.yaml  example_dqn.yaml  example_dueling.yaml  example_spatial_dueling.yaml  global_actions.yaml  level_0_minimal.yaml  level_1_1_integration_test.yaml  level_1_5_no_proximity.yaml  level_1_full_observability.yaml  level_2_1_integration_test.yaml  level_2_pomdp.yaml  level_3_1_integration_test.yaml  level_3_temporal.yaml  quick_test.yaml  townlet_level_1_5.yaml  townlet_level_2_5_temporal.yaml  townlet_level_2_pomdp.yaml
configs/L0_0_minimal/: affordances.yaml  bars.yaml  brain.yaml  drive_as_code.yaml  substrate.yaml  training.yaml  variables_reference.yaml
configs/L0_5_dual_resource/: README.md  affordances.yaml  bars.yaml  brain.yaml  drive_as_code.yaml  substrate.yaml  training.yaml  variables_reference.yaml
configs/L0_minimal/: bars.yaml  cues.yaml  training.yaml
configs/L1_3D_house/: affordances.yaml  drive_as_code.yaml  substrate.yaml  training.yaml  variables_reference.yaml
configs/L1_continuous_1D/: bars.yaml  brain.yaml  cues.yaml  drive_as_code.yaml  substrate.yaml  training.yaml  variables_reference.yaml
configs/L1_continuous_2D/: drive_as_code.yaml  substrate.yaml  training.yaml  variables_reference.yaml
configs/L1_continuous_3D/: cascades.yaml  drive_as_code.yaml  substrate.yaml  training.yaml  variables_reference.yaml
configs/L1_full_observability/: affordances.yaml  brain.yaml  drive_as_code.yaml  substrate.yaml  training.yaml  variables_reference.yaml
configs/L2_partial_observability/: affordances.yaml  brain.yaml  cascades.yaml  drive_as_code.yaml  substrate.yaml  training.yaml  variables_reference.yaml
configs/L3_temporal_mechanics/: affordances.yaml  brain.yaml  drive_as_code.yaml  substrate.yaml  training.yaml  variables_reference.yaml
configs/L_N1_debug/: affordances.yaml  bars.yaml  (+7 more)
deploy/: hamlet-demo.service  install-service.sh  townlet-demo.service
diagrams/: 00-README.md  01-system-overview.md  02-compilation-pipeline.md  03-training-loop.md  04-environment-subsystem.md  05-agent-learning-subsystem.md  06-data-flow-and-modules.md  07-state-machines.md  08-vfs-deep-dive.md  09-configuration-schemas.md  10-substrate-comparison.md  11-checkpoint-restore.md  12-temporal-mechanics.md  13-database-schema.md  14-class-hierarchies.md  15-observation-construction-pipeline.md  16-action-masking-pipeline.md  17-reward-computation.md
docs/: ACTION_12_EQUIVALENCE_RESULTS.md  ACTION_12_GEMINI_REVIEW_RESPONSE.md  ACTION_12_INTEGRATION_PHASE1.md  ACTION_1_COMPLETE.md  ACTION_1_DESIGN.md  ACTION_1_EVALUATION.md  ACTION_1_HYBRID_DECISION.md  ACTION_1_PROGRESS_DAYS_1_2.md  AGENT_MOONSHOT.md  ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  BRAIN_AS_CODE.md  CHECKPOINT_CLEANUP_ANALYSIS.md  CLEANUP_ROADMAP.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DUAL_MODE_CONFIG.md  FOUNDATION_REBUILD_STATUS.md  INTEGRATION_TESTS.md  INTEGRATION_TESTS_SUMMARY.md  METASERVER_ARCHITECTURE.md  MIGRATION-PRE-COMPILER-TO-COMPILER.md  PR-DESCRIPTION.md  PROJECT_ORGANIZATION_COMPLETE.md  PROJECT_STATUS_REPORT.md  PYTORCH_29.md  README.md  REPLAY_USAGE.md  SOFTWARE_DEFINED_WORLD.md  TASK-000-CONFIGURABLE-SPATIAL-SUBSTRATES.md  TASK-000-PLANNING-STATUS.md  TASK-000-UAC-ACTION-SPACE.md  TASK-001-UAC-CONTRACTS.md  TASK-001-VARIABLE-SIZE-METER-SYSTEM.md  TASK-002-PLANNING-STATUS.md  TASK-002-UAC-CONTRACTS.md  TASK-002-UNIVERSE-COMPILATION-PIPELINE.md  TASK-002A-UAC-CORE-DTOS.md  TASK-002B-UAC-CAPABILITIES.md  TASK-003-UAC-ACTION-SPACE.md  (+21 more)
frontend/: RECOMMENDATIONS_P0-1.md  demo.html  index.html  vite.config.js
scripts/: README-no-defaults-lint.md  README.md  cleanup_redundant_meters.py  measure_phase1_performance.py  migrate_affordances.py  no_defaults_lint.py  remove_redundant_duration_ticks.py  run_demo.py  start_training_run.py  validate_cascade_configs.py  validate_compiler_cli.py  validate_configs.py  validate_substrate_configs.py  validate_substrate_runtime.py  validate_substrates.py
tests/: PLAN-INTEGRATION-TESTS.md  PLAN-SUMMARY.md  README.md  RESEARCH-INTEGRATION-TEST-STRATEGY.md  TEST_WRITING_GUIDE.md  __init__.py  conftest.py  test_no_defaults_lint.py
(+1061 files in other folders)
